Validation impl.